RESOLVED FIXED30244
Wrong Position of #endif in Document::finishedParsing()
https://bugs.webkit.org/show_bug.cgi?id=30244
Summary Wrong Position of #endif in Document::finishedParsing()
Lyon Chen
Reported 2009-10-08 21:51:02 PDT
In WebCore\dom\Document.cpp, the position of #endif is wrong. if (Frame* f = frame()) { f->loader()->finishedParsing(); #if ENABLE(INSPECTOR) if (!page()) return; if (InspectorController* controller = page()->inspectorController()) controller->mainResourceFiredDOMContentEvent(f->loader()->documentLoader(), url()); } #endif Should be changed to: if (Frame* f = frame()) { f->loader()->finishedParsing(); #if ENABLE(INSPECTOR) if (!page()) return; if (InspectorController* controller = page()->inspectorController()) controller->mainResourceFiredDOMContentEvent(f->loader()->documentLoader(), url()); #endif }
Attachments
Patch for bug 30244 (450 bytes, patch)
2009-10-08 22:02 PDT, Lyon Chen
no flags
Patch for bug 30244 with change log. (1.15 KB, patch)
2009-10-09 06:07 PDT, Lyon Chen
no flags
Lyon Chen
Comment 1 2009-10-08 22:02:30 PDT
Created attachment 40928 [details] Patch for bug 30244 This patch fix the error.
Lyon Chen
Comment 2 2009-10-09 06:07:38 PDT
Created attachment 40946 [details] Patch for bug 30244 with change log.
Alexey Proskuryakov
Comment 3 2009-10-09 16:16:58 PDT
Comment on attachment 40946 [details] Patch for bug 30244 with change log. To make sure that your patch isn't overlooked, please set review flag to "?" next time. r=me
WebKit Commit Bot
Comment 4 2009-10-11 15:34:13 PDT
Comment on attachment 40946 [details] Patch for bug 30244 with change log. Clearing flags on attachment: 40946 Committed r49428: <http://trac.webkit.org/changeset/49428>
WebKit Commit Bot
Comment 5 2009-10-11 15:34:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.