2009-10-11  Lyon Chen  <lyon.chen@torchmobile.com>

Reviewed by Alexey Proskuryakov.

        Correct the position of #endif sentence inside WebCore::Document::finishedParsing().

        https://bugs.webkit.org/show_bug.cgi?id=30244

        This change requires no test case as it fix a compiling error.

        * dom/Document.cpp:
        (WebCore::Document::finishedParsing):

Canonical link: https://commits.webkit.org/40950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49428 268f45cc-cd09-0410-ab3c-d52691b4dbfc