WebCore/dom/Document.cpp
@@ -4027,8 +4027,8 @@ void Document::finishedParsing()
 
         if (InspectorController* controller = page()->inspectorController())
             controller->mainResourceFiredDOMContentEvent(f->loader()->documentLoader(), url());
-    }
 #endif
+    }
 }
 
 Vector<String> Document::formElementsState() const
